# cardashian

./: .gitignore  README.md  cardashian_install.sh  deploy.sh  deploy_tasks.sh  rpi_image_info.sh  start_cardashian.sh  stop_cardashian.sh
.github/workflows/: github-actions-build.yml
core/: Connector.py  DeviceManager.py  DistanceCounter.py  EmuSeialClient.py  Httpowy.py  Idrive.py  MapManager.py  MierzejClient.py  WSConnector.py  hujowy.py  main.py
core/Httpowy/: Httpowy.py
core/maps/: Server.py
displayapp/: README.md  package-lock.json  package.json
displayapp/public/: index.html  style.css
displayapp/src/: App.vue  core_actions.js  main.js  router.js  store.js
emuserialpc/: CMakeLists.txt  EMUSerial.c  EMUSerial.h  Makefile  emuserial  front.c  front.h  globals.c  globals.h  main.c  serial.c  serial.h  socket_server.c  socket_server.h
emuserialpc/format/: emuFormat.h  emuStruct.h
flashers/: flash.sh  ft232.conf
lada_front/: README.md  package-lock.json  package.json
lada_front/public/: index.html  labels.json  style.css
linux/: 90-cardashian.rules  90-devices.rules  cardashian.service  cardashian_check.sh  cardashian_cold_start.sh  cardashian_install.sh  cardashian_run_emuserial.sh  cardashian_start.sh  cardashian_stop.sh  cardashian_update.sh  chrome.service  configure_display.sh  core.service  display.service  rc.local  run_emuserial.sh  screen_rotate_180.sh  screen_rotate_270.sh  screen_rotate_360.sh  screen_rotate_90.sh  set_wifi.sh  tasks.sh
mierzej/: .gitignore
smos/: README.md  build.sh  configure.sh  run_image.sh  stop_image.sh
(+103 files in other folders)
